--- a/projects/can_api/files/c_templates/h_file.j2
+++ b/projects/can_api/files/c_templates/h_file.j2
@@ -9,26 +9,26 @@
 void can_init_{{ node.name }}(void);
 
 {% for message in tx_messages %}
-extern uint8_t {{ message.name }}_data[];
-extern can_frame_t {{ message.name }}_msg;
-extern struct can_tools_{{ message.name }}_t {{ message.name }};
+extern uint8_t {{ message.name|lower }}_data[];
+extern can_frame_t {{ message.name|lower }}_msg;
+extern struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
 
 /*
- * Send the {{ message.name }} message
+ * Send the {{ message.name|lower }} message
  *
- * First it takes the data struct `{{ message.name }}_t` and packs it into an
- * array of bytes in {{ message.name }}_data, which is a part of the
+ * First it takes the data struct `{{ message.name|lower }}_t` and packs it into an
+ * array of bytes in {{ message.name|lower }}_data, which is a part of the
  * can_frame_t. Then the can_frame_t is sent.
  */
-void can_send_{{ message.name }}(void);
+void can_send_{{ message.name|lower }}(void);
 
 {% endfor %}
 
 {% for message in rx_messages %}
-extern uint8_t {{ message.name }}_data[];
-extern can_frame_t {{ message.name }}_msg;
-extern struct can_tools_{{ message.name }}_T {{ message.name }};
+extern uint8_t {{ message.name|lower }}_data[];
+extern can_frame_t {{ message.name|lower }}_msg;
+extern struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
 
-int can_receive_{{ message.name }}(void);
+int can_receive_{{ message.name|lower }}(void);
 
 {% endfor %}
