--- a/projects/can_api/files/c_templates/h_file.j2
+++ b/projects/can_api/files/c_templates/h_file.j2
@@ -9,9 +9,9 @@
 void can_init_{{ node.name }}(void);
 
 {% for message in tx_messages %}
-extern uint8_t {{ message.name|lower }}_data[];
-extern can_frame_t {{ message.name|lower }}_msg;
-extern struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
+extern volatile uint8_t {{ message.name|lower }}_data[];
+extern volatile can_frame_t {{ message.name|lower }}_msg;
+extern volatile struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
 
 /*
  * Send the {{ message.name|lower }} message
@@ -25,9 +25,9 @@ void can_send_{{ message.name|lower }}(void);
 {% endfor %}
 
 {% for message in rx_messages %}
-extern uint8_t {{ message.name|lower }}_data[];
-extern can_frame_t {{ message.name|lower }}_msg;
-extern struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
+extern volatile uint8_t {{ message.name|lower }}_data[];
+extern volatile can_frame_t {{ message.name|lower }}_msg;
+extern volatile struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
 
 int can_receive_{{ message.name|lower }}(void);
 
