Bug fixes from testing

--- a/projects/can_api/files/c_templates/c_file.j2
+++ b/projects/can_api/files/c_templates/c_file.j2
@@ -12,6 +12,7 @@ void can_init_{{ node.name }}(void) {
 uint8_t {{ message.name|lower }}_data[{{ message.length }}];
 
 can_frame_t {{ message.name|lower }}_msg = {
+    .id = {{ message.frame_id }},
     .mob = 0,
     .data = {{ message.name|lower }}_data,
     .dlc = {{ message.length }},
