--- a/projects/can_api/files/c_templates/c_file.j2
+++ b/projects/can_api/files/c_templates/c_file.j2
@@ -9,7 +9,7 @@ void can_init_{{ node.name }}(void) {
  * Transmit messages
  */
 {% for message in tx_messages %}
-uint8_t {{ message.name|lower }}_data[{{ message.length }}];
+uint8_t {{ message.name|lower }}_data[{{ message.length }}] = {0};
 
 can_frame_t {{ message.name|lower }}_msg = {
     .id = {{ message.frame_id }},
@@ -18,7 +18,7 @@ can_frame_t {{ message.name|lower }}_msg = {
     .dlc = {{ message.length }},
 };
 
-volatile struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
+volatile struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }} = {0};
 
 void can_send_{{ message.name|lower }}(void) {
     ATOMIC_BLOCK(ATOMIC_RESTORESTATE) {
@@ -42,7 +42,7 @@ void can_send_{{ message.name|lower }}(void) {
  * Receive messages
  */
 {% for message in rx_messages %}
-uint8_t {{ message.name|lower }}_data[{{ message.length }}];
+uint8_t {{ message.name|lower }}_data[{{ message.length }}] = {0};
 
 can_frame_t {{ message.name|lower }}_msg = {
     .mob = {{ mobs[message.name] }},
@@ -58,10 +58,16 @@ can_filter_t {{ message.name|lower }}_filter = {
     .mask = 0x7FF, // Exact match
 };
 
-struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }};
+struct can_tools_{{ message.name|lower }}_t {{ message.name|lower }} = {0};
 
 int can_receive_{{ message.name|lower }}(void) {
-    int rc = can_receive(&{{ message.name|lower }}_msg, {{ message.name|lower }}_filter);
+    (void)can_receive(&{{ message.name|lower }}_msg, {{ message.name|lower }}_filter);
+
+    return 0;
+}
+
+int can_poll_receive_{{ message.name|lower }}(void) {
+    int rc = can_poll_receive(&{{ message.name|lower }}_msg);
 
     if (rc == 0) {
         can_tools_{{ message.name|lower }}_unpack(&{{ message.name|lower }}, {{ message.name|lower }}_msg.data, {{ message.length }});
