--- a/bazel/tools/avrdude.sh.tmpl
+++ b/bazel/tools/avrdude.sh.tmpl
@@ -8,7 +8,7 @@ fi
 
 _LFUSE=${LFUSE:=0x65}
 _HFUSE=${HFUSE:=0xD8}
-_EFUSE=${EFUSE:=0xFE}
+_EFUSE=${EFUSE:=0xFF}
 
 if [ ! -z ${DEBUG+x} ]; then
     printf "FUSE_OP: ${FUSE_OP}\\n"
@@ -17,7 +17,7 @@ if [ ! -z ${DEBUG+x} ]; then
     printf "  EFUSE: ${_EFUSE}\\n"
 fi
 
-avrdude -v -P usb -p {part} -F \
+avrdude -v -P usb -p {part} \
         -C {config} \
         -U lfuse:${FUSE_OP}:${_LFUSE}:m \
         -U hfuse:${FUSE_OP}:${_HFUSE}:m \
