--- a/infrastructure/kicad_website/backend/templates/test.html
+++ b/infrastructure/kicad_website/backend/templates/test.html
@@ -5,12 +5,7 @@
     <title>Dropdown</title>
 </head>
 <body>
-<select name="colour" method="GET" action="/">
-  <option value="{{colours[0]}}" selected>{{colours[0]}}</option>
-  {% for colour in colours[1:] %}
-    <option value="{{colour}}">{{colour}}</option>
-  {% endfor %}
-</select>
+<h1>Hiiiii</h1>
 
 </body>
 </html>
