Cleaned up Code

--- a/libs/tunables/templates/h_file.j2
+++ b/libs/tunables/templates/h_file.j2
@@ -3,4 +3,5 @@
 /* 
 initializes the struct that will contain all the different tunable parameters
 */
-extern struct {{ name }}_tunables tunables;
+extern size_t NUM_TUNABLES;
+extern struct {{ name }}_tunables;
