--- a/libs/tunables/templates/c_file.j2
+++ b/libs/tunables/templates/c_file.j2
@@ -1,8 +1,8 @@
-#include {{ header_file }}_tunaables.h
+#include vehicle/mkvi/software/{{ name }}/tunables.h
 
-size_t NUM_TUNABLES = {{num_tunables}}; 
+size_t NUM_TUNABLES = {{t_params | length}}; 
 
-struct {{ name }}_tunables tunables {
+struct {{ name }}_tunables {
     {% for parameter in t_params %}
         {{parameter}};
     {% endfor %}
