--- a/libs/tunables/templates/h_file.j2
+++ b/libs/tunables/templates/h_file.j2
@@ -3,7 +3,7 @@
 /* 
 initializes the struct that will contain all the different tunable parameters
 */
-extern size_t NUM_TUNABLES;
+extern const size_t NUM_TUNABLES;
 extern struct {{ name }}_tunables tunables;
 
 struct {{ name }}_tunables {
